--- a/src/SoftinuxBase.WebApplication/SoftinuxBase.WebApplication.csproj
+++ b/src/SoftinuxBase.WebApplication/SoftinuxBase.WebApplication.csproj
@@ -24,6 +24,7 @@
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\EduxSoft.Base.Data.Entities\EduxSoft.Base.Data.Entities.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Infrastructure\SoftinuxBase.Infrastructure.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security\SoftinuxBase.Security.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security.Data.Entities\SoftinuxBase.Security.Data.Entities.csproj" />
