--- a/src/WebApplication/WebApplication.csproj
+++ b/src/WebApplication/WebApplication.csproj
@@ -58,6 +58,7 @@
     <ProjectReference Include="..\SoftinuxBase.Security.Data.Entities\SoftinuxBase.Security.Data.Entities.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security.Data.EntityFramework\SoftinuxBase.Security.Data.EntityFramework.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security.Data.EntityFramework.Sqlite\SoftinuxBase.Security.Data.EntityFramework.Sqlite.csproj" />
+    <ProjectReference Include="..\SoftinuxBase.SeedDatabase\SoftinuxBase.SeedDatabase.csproj" />
     <ProjectReference Include="..\SoftinuxBase.WebApplication\SoftinuxBase.WebApplication.csproj" />
     <!--ProjectReference Include="..\SoftinuxBase.SeedDatabase\SoftinuxBase.SeedDatabase.csproj" /-->
   </ItemGroup>
