--- a/src/SoftinuxBase.Barebone/package.json
+++ b/src/SoftinuxBase.Barebone/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.0",
     "jquery-validation-unobtrusive": "^3.2.11",
+    "jquery-ajax-unobtrusive": "3.2.6",
     "js-cookie": "^2.2.0",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.14.7",
