working in progress : Base extension

--- a/EduxSoft.Base/EduxSoft.Base.csproj
+++ b/EduxSoft.Base/EduxSoft.Base.csproj
@@ -24,9 +24,11 @@
   <ItemGroup>
     <None Remove="stylecop.json" />
     <None Remove="Styles\base.css" />
+    <None Remove="Views\Classe\Index.cshtml" />
     <None Remove="Views\Configuration\Index.cshtml" />
     <None Remove="Views\Section\Create.cshtml" />
     <None Remove="Views\Section\Index.cshtml" />
+    <None Remove="Views\Shared\_AjaxForClasse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" />
@@ -44,9 +46,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="2.9.406" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Classe\" />
   </ItemGroup>
 
 </Project>
