--- a/src/EduxSoft.Student.Data.EF/EduxSoft.Student.Data.EF.csproj
+++ b/src/EduxSoft.Student.Data.EF/EduxSoft.Student.Data.EF.csproj
@@ -6,11 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="ExtCore.Data.EntityFramework.Sqlite" Version="4.0.0" />
+    <PackageReference Include="ExtCore.Data.EntityFramework.SqlServer" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\EduxSoft.Base.Data.Entities\EduxSoft.Base.Data.Entities.csproj" />
     <ProjectReference Include="..\EduxSoft.Student.Data.Abstractions\EduxSoft.Student.Data.Abstractions.csproj" />
+    <ProjectReference Include="..\EduxSoft.Student.Data.Entities\EduxSoft.Student.Data.Entities.csproj" />
   </ItemGroup>
 
 </Project>
