--- a/src/WebApplication/appsettings.json
+++ b/src/WebApplication/appsettings.json
@@ -8,13 +8,13 @@
   },
   "ConnectionStrings": {
     // Please use '/' for directory separator
-    "Default": "Data Source=basedb.sqlite"
+    "Default": "Data Source=eduxsoft.sqlite",
     // SqlServer
-    //"Default": "Data Source=localhost;Initial Catalog=Softinux;MultipleActiveResultSets=True;Persist Security Info=True;User ID=softinux;Password=?"
+    //"Default": "Data Source=localhost;Initial Catalog=Softinux;MultipleActiveResultSets=True;Persist Security Info=True;"
     // PostgreSql
     //"Default": "Host=localhost;Port=5432;Database=softinux;Pooling=true;User ID=softinux;Password=?;"
     // localdb
-    //"Default": "Data Source=(localdb)\mssqllocaldb;Database=softinux;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"Default": "Data Source=CEDRIC\\SQLEXPRESS;Initial Catalog=softinux;Integrated Security=True"
   },
   "Corporate": {
     "Name": "SOFTINUX",
