--- a/src/EduxSoft.Student/EduxSoft.Student.csproj
+++ b/src/EduxSoft.Student/EduxSoft.Student.csproj
@@ -4,6 +4,18 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\lange\Source\Repos\Education-Solution\Base\src\EduxSoft.Student\EduxSoft.Student.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Views\Student\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Student\Index.cshtml" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
@@ -16,6 +28,13 @@
     <ProjectReference Include="..\EduxSoft.Student.Data.EF\EduxSoft.Student.Data.EF.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Infrastructure\SoftinuxBase.Infrastructure.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security.Common\SoftinuxBase.Security.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Styles\" />
+    <Folder Include="Scripts\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
