--- a/src/SoftinuxBase.WebApplication/SoftinuxBase.WebApplication.csproj
+++ b/src/SoftinuxBase.WebApplication/SoftinuxBase.WebApplication.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\EduxSoft.Base.Data.Entities\EduxSoft.Base.Data.Entities.csproj" />
+    <ProjectReference Include="..\EduxSoft.Student.Data.Entities\EduxSoft.Student.Data.Entities.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Infrastructure\SoftinuxBase.Infrastructure.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security\SoftinuxBase.Security.csproj" />
     <ProjectReference Include="..\SoftinuxBase.Security.Data.Entities\SoftinuxBase.Security.Data.Entities.csproj" />
