--- a/src/EduxSoft.Student/EduxSoft.Student.csproj
+++ b/src/EduxSoft.Student/EduxSoft.Student.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -22,11 +22,12 @@
     <EmbeddedResource Include="Views\Shared\_ModalHeader.cshtml" />
     <EmbeddedResource Include="Views\Student\Create.cshtml" />
     <EmbeddedResource Include="Views\Student\Index.cshtml" />
+    <EmbeddedResource Include="Views\Student\ListStudent.cshtml"/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
